# giftoavif

./: Cargo.toml  LICENSE  index.html  server.py  worker.js
.cargo/: config.toml
.github/workflows/: release.yml
.helix/: languages.toml
media/: site.webmanifest
src/: encoder.rs  frame_utils.rs  isobmff.rs  lib.rs  resampler.rs  scene_change.rs
