[package]
name = "giftoavif"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitstream-io = "4.9.0"
byteorder = "1.5.0"
console_error_panic_hook = "0.1.7"
image = { version = "0.25.9", default-features = false, features = ["gif"] }
pixel_formats = "0.1.5"
rav1e = { git = "https://github.com/thmasq/rav1e", tag = "0.8.12", features = ["wasm"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-rayon = { version = "1.3.0", features = ["nightly", "no-bundler"] }
zerocopy = "0.8.33"

[profile.release]
panic = "abort"
lto = "fat"
opt-level = 3
codegen-units = 1
