[package]
name = "giftoavif"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/thmasq/giftoavif"
description = "Webapp for transcoding gifs to avifs"

[lib]
crate-type = ["cdylib"]

[dependencies]
av-scenechange = { git = "https://github.com/thmasq/av-scenechange", tag = "0.22.3", default-features = false }
bitstream-io = "4.9.0"
byteorder = "1.5.0"
console_error_panic_hook = "0.1.7"
image = { version = "0.25.9", default-features = false, features = ["gif"] }
log = "0.4.29"
pixel_formats = "0.1.5"
rav1e = { git = "https://github.com/thmasq/rav1e", tag = "0.8.13-3", features = ["wasm"] }
rayon = { version = "1.11.0", features = ["web_spin_lock"] }
v_frame = { version = "0.5.0", features = ["padding_api"] }
wasm-bindgen = "0.2.108"
wasm-bindgen-rayon = { version = "1.3.0", features = ["nightly", "no-bundler"] }
zerocopy = "0.8.33"

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
